objects/Consumer__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <description>Enter address for the consumer</description>
        <label>Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>Value of City</description>
        <label>City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Consumer</label>
    <nameField>
        <label>Consumer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Consumers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>